analysis sentences of backtick

--- a/src/views/home/index.ejs
+++ b/src/views/home/index.ejs
@@ -11,5 +11,15 @@
 <body>
     <h1>Good Morning!</h1>
     <div class="check"> none</div>
+    <div id="newSum"></div>
+    
+    <div style="display: none;">모달창0</div>
+    <div style="display: none;">모달창1</div>
+    <div style="display: none;">모달창2</div>
+
+    <button>버튼0</button>
+    <button>버튼1</button>
+    <button>버튼2</button>
+    
 </body>
 </html>
