for of and for in ferct understandin

--- a/src/views/home/index.ejs
+++ b/src/views/home/index.ejs
@@ -22,6 +22,8 @@
     <button>버튼2</button>
 
     <img id="test" > 
+    <input type="text" id="idea">
+    <button id="submit1">신청</button>
     
 </body>
 </html>
